aar/ingress-rails.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - rails.aar.anrop.se
      secretName: aar-rails-tls
  rules:
    - host: rails.aar.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rails
              port:
                number: 8080
